gitignore: Add *.swiftinterface files to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,9 @@ DerivedData/
 *.perspectivev3
 !default.perspectivev3
 
+# SwiftInterface files (large, generated)
+*.swiftinterface
+
 # Swift Package Manager
 .swiftpm/
 Package.resolved
