gitignore: Add Generated/ directory to gitignore
- Generated output should not be committed
- Users will generate their own files from swiftinterface sources

--- a/.gitignore
+++ b/.gitignore
@@ -25,6 +25,10 @@ DerivedData/
 # SwiftInterface files (large, generated)
 *.swiftinterface
 
+# Generated output (created by modifier-swift CLI)
+Generated/
+/Generated/
+
 # Swift Package Manager
 .swiftpm/
 Package.resolved
